--- a/Nivel1-A/Documentos/Guia/preamble.tex
+++ b/Nivel1-A/Documentos/Guia/preamble.tex
@@ -83,6 +83,19 @@
 \definecolor{P2}{HTML}{ffffbf}
 \definecolor{P3}{HTML}{fc8d59}
 
+\definecolor{N1}{HTML}{eff3ff}
+\definecolor{N2}{HTML}{bdd7e7}
+\definecolor{N3}{HTML}{6baed6}
+\definecolor{N4}{HTML}{2171b5}
+
+\definecolor{NB1}{HTML}{1a9850}
+\definecolor{NB2}{HTML}{91cf60}
+\definecolor{NB3}{HTML}{d9ef8b}
+\definecolor{NB4}{HTML}{ffffbf}
+\definecolor{NB5}{HTML}{fee08b}
+\definecolor{NB6}{HTML}{fc8d59}
+\definecolor{NB7}{HTML}{d73027}
+
 % Ejemplos, observaciones y teorema
 \theoremstyle{definition}
 \newtheorem{exa}{Ejemplo}[section]
