Se arregla la guia 6

--- a/Nivel1-A/Documentos/Guia/guia6.tex
+++ b/Nivel1-A/Documentos/Guia/guia6.tex
@@ -96,7 +96,7 @@ Valor & \multicolumn{1}{c}{Definición}        & \multicolumn{1}{c}{Color}      
 \end{table}
 
 \item Guarde el mapa obtenido como una imagen en jpg.
-
+\end{enumerate}
 
 \section{Incendios en la patagonia}
 
@@ -154,7 +154,7 @@ mayor a $0.66$     & Incendio, severidad alta        & \textcolor{NB7}{$\blacksq
 \caption{Tabla de colores para un mapa de deforestación.}
 \label{tab:inc}
 \end{table}
-
+\end{enumerate}
 \section{Deteccion de camalotes en la región Pampeana}
 
 La Plata, Buenos Aires, Argentina
