se agrega guía 4 con explicación para índices y algunas funciones

--- a/Nivel1-A/Documentos/Guia/guia2.tex
+++ b/Nivel1-A/Documentos/Guia/guia2.tex
@@ -42,7 +42,7 @@ Utilice el mapa con puntos de interés para identificar diferentes tipos de vege
 \section{Actividad práctica I}
 
 \begin{enumerate}
-  \item Despliegue las tres combinaciones realizadas utilizando múltiples visualizadores(Figura \ref{fig:mono}). Utilice las herramientas \menu{Panning tool} y \menu{Zooming tool} e identifique la intersección río Paraná y río Iguazú (\ref{fig:mapa} punto de referencia 4):
+  \item Despliegue las tres combinaciones realizadas utilizando múltiples visualizadores(Figura \ref{fig:mono}). Utilice las herramientas \menu{Panning tool} y \menu{Zooming tool} e identifique la intersección río Paraná y río Iguazú (Figura\ref{fig:mapa} punto de referencia 4):
   \begin{enumerate}
     \item Compare color y tono de los ríos Paraná e Iguazú. En base a interpretación visual ¿Que combinación considera la más adecuada para identificar sedimentos? ¿Cuál  considera que tiene mayor concentración de sedimentos?
         \item  Desplácese hasta Puerto Iguazú (\ref{fig:mapa} punto de referencia 11) y analice el área urbana. ¿En qué combinación puede ver con mayor nitidez la red víal?
@@ -50,7 +50,7 @@ Utilice el mapa con puntos de interés para identificar diferentes tipos de vege
 
   \end{enumerate}
 
-  \item Identifique en el mapa de referencia los puntos                       1 y 4 correspondientes a Selva Paraense y Bosque Implantado respectivamente (\ref{fig:mapa}) y compare:
+  \item Identifique en el mapa de referencia los puntos                       1 y 4 correspondientes a Selva Paraense y Bosque Implantado respectivamente (Figura\ref{fig:mapa}) y compare:
   \begin{enumerate}
     \item  Compare color y tono de la selva paranaense y el bosque implantado para color natural.
      \item  Compare color y tono de la selva paranaense y el bosque implantado para infrarrojo color.
