--- a/Nivel1-A/Documentos/Guia/preamble.tex
+++ b/Nivel1-A/Documentos/Guia/preamble.tex
@@ -79,22 +79,22 @@
 \definecolor{B27}{HTML}{A6CEE3}
 \definecolor{B28}{HTML}{1F78B4}
 
-\definecolor{P1}{HTML}{91cf60}
-\definecolor{P2}{HTML}{ffffbf}
-\definecolor{P3}{HTML}{fc8d59}
+\definecolor{P1}{HTML}{91CF60}
+\definecolor{P2}{HTML}{FFFFBF}
+\definecolor{P3}{HTML}{FC8D59}
 
-\definecolor{N1}{HTML}{eff3ff}
-\definecolor{N2}{HTML}{bdd7e7}
-\definecolor{N3}{HTML}{6baed6}
-\definecolor{N4}{HTML}{2171b5}
+\definecolor{N1}{HTML}{EFF3FF}
+\definecolor{N2}{HTML}{BDD7E7}
+\definecolor{N3}{HTML}{6BAED6}
+\definecolor{N4}{HTML}{2171B5}
 
-\definecolor{NB1}{HTML}{1a9850}
-\definecolor{NB2}{HTML}{91cf60}
-\definecolor{NB3}{HTML}{d9ef8b}
-\definecolor{NB4}{HTML}{ffffbf}
-\definecolor{NB5}{HTML}{fee08b}
-\definecolor{NB6}{HTML}{fc8d59}
-\definecolor{NB7}{HTML}{d73027}
+\definecolor{NB1}{HTML}{1A9850}
+\definecolor{NB2}{HTML}{91CF60}
+\definecolor{NB3}{HTML}{D9EF8B}
+\definecolor{NB4}{HTML}{FFFFBF}
+\definecolor{NB5}{HTML}{FEE08B}
+\definecolor{NB6}{HTML}{FC8D59}
+\definecolor{NB7}{HTML}{D73027}
 
 % Ejemplos, observaciones y teorema
 \theoremstyle{definition}
