Correccion menor en la guia de la clase 2.

--- a/Nivel2-B/Documentos/Guia/guia2.tex
+++ b/Nivel2-B/Documentos/Guia/guia2.tex
@@ -41,7 +41,7 @@ Abra la imagen
   \directory{raster\_data/S1B\_IW\_SLC\_\_1SDV\_20171012.dim}
   \end{center}
 
-correspondiente al satélite \emph{Sentinel 1-b}. Despliege la banda \texttt{Sigma\_VV\_db}.
+correspondiente al satélite \emph{Sentinel 1B}. Despliege la banda \texttt{Sigma\_VV\_db}.
 
 Identifique en ella
 
@@ -78,10 +78,10 @@ Puede ayudarse utilizando la imagen óptica.
 
 \section{Valores de $dB$}
 
-Es habitual expresar el valor del coeficiente de backscatter en dB para las imágenes SAR. Para calcularlo en distintos sectores de la imagen, puede posicionarse sobre un píxel y observar en \menu{Pixel info} el valor de \texttt{Sigma0\_HH\_db} en dB.
+Es habitual expresar el valor del coeficiente de backscatter en dB para las imágenes SAR. Para calcularlo en distintos sectores de la imagen, puede posicionarse sobre un píxel y observar en \menu{Pixel info} el valor de \texttt{Sigma0\_HH\_db} o \texttt{Sigma0\_VV\_db} en dB.
 
 
-Utilice la imagen óptica para identificar en la imagen \emph{Sentinel-1b}:
+Utilice la imagen óptica para identificar en la imagen \emph{Sentinel-1B}:
 
  \begin{enumerate}
      \item El valor de dB de la pista de aterrizaje.
