Corrección de redacción en una de las preguntas.

--- a/Nivel2-B/Documentos/Guia/guia2.tex
+++ b/Nivel2-B/Documentos/Guia/guia2.tex
@@ -108,7 +108,7 @@ Comparando las tres imágenes SAR utilizadas responda:
 \end{que}
 
 \begin{que}
-  ¿Que sucede sobre con la vegetación sobre la ladera de la montaña al observar las imágenes en banda X, C y L?
+  ¿Que sucede con la vegetación sobre la ladera de la montaña al observar las imágenes en banda X, C y L?
 \end{que}
 
 \begin{que}
