Corrección gramatical en la guía 1.

--- a/Nivel2-B/Documentos/Guia/guia1.tex
+++ b/Nivel2-B/Documentos/Guia/guia1.tex
@@ -2,7 +2,7 @@
 
 Esta clase tiene como objetivo familiarizarze con el entorno gráfico del \emph{SNAP}. El \emph{SNAP (Sentinel Aplication Toolbox)} es un  software de procesamiento de imágenes diseñado por la \emph{Agencia Espacial Europea (ESA)}, cuyas herramientas simplifican el trabajo con imágenes radar y ópticas.
 
-Durante el cuerso utilizaremos imágenes de la zona del Canal de Beagle frente a la ciudad de Ushuaia, Tierra del Fuego, Antártida e Islas del Atlántico Sur, Argentina.
+Durante el curso utilizaremos imágenes de la zona del Canal de Beagle frente a la ciudad de Ushuaia, Tierra del Fuego, Antártida e Islas del Atlántico Sur, Argentina.
 
 \section{Sobre esta guía}
 
