--- a/Nivel1-A/Documentos/Videos/clase2.tex
+++ b/Nivel1-A/Documentos/Videos/clase2.tex
@@ -36,7 +36,7 @@
   \begin{figure}
     \centering
     \includegraphics[width=0.57\textwidth]{fig:geometria.png}
-    \caption{Radiancian como unidad en teledetección.}
+    \caption{Radiancia como unidad en teledetección.}
     \label{}
   \end{figure}
 \end{frame}
