Se agrega una animacion mostrando la resolución espacial.

--- a/Nivel1-A/Documentos/Videos/clase1.tex
+++ b/Nivel1-A/Documentos/Videos/clase1.tex
@@ -97,6 +97,36 @@
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:pixel6.png}}{./figs/fig:pixel6.mp4}
+    \caption{Resolución proyectada en el terreno.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:pixel3.png}}{./figs/fig:pixel3.mp4}
+    \caption{Resolución proyectada en el terreno.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \movie[width = 0.8\textwidth,loop,autostart]{\centering\includegraphics[width=0.8\textwidth]{fig:pixel1.png}}{./figs/fig:pixel1.mp4}
+    \caption{Resolución proyectada en el terreno.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
     \begin{block}{Definición}
         Es la capacidad del sensor de distinguir objetos en el terreno.
     \end{block}
