Corrección a la guía 4.

--- a/Nivel2-B/Documentos/Guia/guia4.tex
+++ b/Nivel2-B/Documentos/Guia/guia4.tex
@@ -58,7 +58,7 @@ La descomposición de Pauli permite separar la información sobre interacciones 
 La descomposición genera tres bandas que suelen mostrarse de la siguiente manera:
 
 \begin{itemize}
-    \item Azul: Información por procesos de un solo rebote o un número impar par de rebotes.
+    \item Azul: Información por procesos de un solo rebote o un número impar de rebotes.
     \item Verde: Información por procesos de scattering en volumen.
     \item Rojo: Información por procesos de doble rebote o un número par de rebotes.
 \end{itemize}
