Modificaciones a la guia 3 de referencias.

--- a/Nivel2-B/Documentos/Guia/guia4.tex
+++ b/Nivel2-B/Documentos/Guia/guia4.tex
@@ -7,7 +7,7 @@ Esta clase tiene como objetivo comprender los conceptos básicos de polarimetria
 Para poder realizar descomposiciones polatrimétricas es necesario conservar la información completa de la imagen SAR a lo largo de todo el proceso. Para hacer esto repetiremos los pasos vistos en la clase anterior, pero haciendo foco en como mantener dicha información.
 
 \subsection{Calibración}
-Abra la imagen \directory{ALPSRP278916070-L1.1.zip} que descargó del \emph{Alaska Satellite Facility}.  Diríjase a \menu{Radar>Radiometric>Calibrate} (Figura \ref{fig:calibrar}) y, en este caso, tilde la opción \emph{Save as complex output} en \emph{Processing parameters}. Recuerde siempre asignar la ruta de guardado.
+Abra la imagen \directory{ALPSRP278916070-L1.1.zip} que descargó del \emph{Alaska Satellite Facility}.  Diríjase a \menu{Radar>Radiometric>Calibrate} (Figura \ref{fig:calibrar-2}) y, en este caso, tilde la opción \emph{Save as complex output} en \emph{Processing parameters}. Recuerde siempre asignar la ruta de guardado.
 
 \begin{figure}[h!]
     \centering
@@ -15,7 +15,7 @@ Abra la imagen \directory{ALPSRP278916070-L1.1.zip} que descargó del \emph{Alas
     \hspace{1cm}
     \subfloat[Processing parameters]{\includegraphics[width=0.35\textwidth]{fig:calibrar3.png}}
     \caption{Calibración de productos SAR utilizando el SNAP. Recuerde seleccionar en este caso la opcíon \emph{Save as complex output}.}
-    \label{fig:calibrar}
+    \label{fig:calibrar-2}
 \end{figure}
 
 \subsection{Cálculo de matriz de coherencia}
